--- a/assets/main.css
+++ b/assets/main.css
@@ -1,14 +1,16 @@
 body {
-    margin: 60px auto;
-    width: 70%;
+    margin: auto;
+    width: 90%;
+    font-family: 'Helvetica', 'Arial', 'Sans-Serif';
 }
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+nav ul,
+footer ul {
     padding: 0px;
     list-style: none;
     font-weight: bold;
 }
-nav ul li, footer ul li {
+nav ul li,
+footer ul li {
     display: inline;
     margin-right: 20px;
 }
@@ -20,25 +22,28 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-size: 1.8em;
 }
 p {
-    font-size: 1.5em;
-    line-height: 1.4em;
+    font-size: 1em;
+    line-height: 1.3em;
     color: #333;
 }
 footer {
+    margin: 10;
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
 }
-
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
+nav {
+ border-bottom: 1px solid #d5d5d5;
+}
+h2 {
+    font-size: 1.3em;
+}
+.address a {
+    color: #222
 }
 
-ul.posts li {
-    list-style: none;
+.page {
+    margin: 10px;
 }
-
