--- a/assets/main.css
+++ b/assets/main.css
@@ -48,3 +48,32 @@ h2 {
     margin: 10px;
     min-height: 300px;
 }
+
+.nameHeader {
+    margin-top: 20px;
+    line-height: 62%;
+    font-size: 6vw;
+    text-align: center;
+}
+.nameHeader .first-middle {
+    font-size: 4.5vw;
+    vertical-align: top;
+    font-weight: 100
+}
+.nameHeader .last-heavy {
+    font-weight: 400;
+}
+.nameHeader .last-light {
+    font-weight: 300;
+}
+.nameHeader .gabe {
+    position: relative;
+    right: 6.47vw;
+    margin-top: 4px;
+}
+
+.frontCenter {
+    align-self: center;
+    text-align: center;
+    min-width: 300px;
+}
