--- a/assets/main.css
+++ b/assets/main.css
@@ -14,6 +14,9 @@ footer ul li {
     display: inline;
     margin-right: 20px;
 }
+nav .nav-current {
+    text-decoration: underline;
+}
 a {
     text-decoration: none;
     color: #999;
