--- a/assets/main.css
+++ b/assets/main.css
@@ -33,7 +33,7 @@ p {
     color: #333;
 }
 footer {
-    margin: 10;
+    margin: 10px;
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
 }
