--- a/assets/main.css
+++ b/assets/main.css
@@ -32,6 +32,9 @@ p {
     line-height: 1.3em;
     color: #333;
 }
+.indented {
+    text-indent: 20px;
+}
 footer {
     margin: 10px;
     border-top: 1px solid #d5d5d5;
