--- a/assets/main.css
+++ b/assets/main.css
@@ -52,13 +52,9 @@ h2 {
     color: #222
 }
 
-.roseDrawing {
-    width: 45vw;
-}
 .page {
     margin: 5px;
     min-height: 300px;
-    max-width: 1250px;
     min-width: 200px;
 }
 
@@ -106,62 +102,85 @@ h2 {
 
 
 
-@media (max-width: 1200px) {
-    .nameHeader {
-        margin-top: 20px;
-        line-height: 62%;
-        font-size: 8vw;
-        text-align: center;
+dy {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+}
+.page {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2vw;
+}
+.top-row {
+    width: 50%;
+    min-width: 10em;
+    margin-left: auto;
+    margin-right: auto;
+}
+.rose {
+    width: 15vw;
+    top: 2vw;
+    position: relative;
+    float: left;
+}
+.name-header {
+    font-size: 7vw;
+    float: right;
+    top: 10px;
+    color: rgb(255, 55, 88);
+}
+.alana {
+    position: relative;
+    left: 11.61vw;
+    bottom: -3.1vw;
+}
+.lower-grid {
+    width: 80%;
+    font-size: 1.8vw;
+    min-width: 15em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 4em;
+    position: relative;
+}
+.left-bordered {
+    border-left-style: solid;
+    border-width: 1px;
+    margin-bottom: 4em;
+}
+.rightjust {
+    text-align: right;
+}
+.leftjust {
+    text-align: left;
+}
+.padded {
+    padding: 4vw;
+    max-width: 20em;
+}
+@media screen and (max-width: 48em) {
+    .left-bordered {
+        border-width: 0px;
     }
-    .nameHeader .first-middle {
-        font-size: 5.5vw;
-        vertical-align: top;
-        font-weight: 100
+    .lower-grid {
+        font-size: 1em;
+        margin: 0em;
     }
-    .nameHeader .last-heavy {
-        font-weight: 400;
+    .padded {
+        padding: 1vw;
     }
-    .nameHeader .last-light {
-        font-weight: 300;
+}
+@media screen and (max-width: 20em) {
+    .rose {
+        width: 3em;
+        top: 2vw;
     }
-    .nameHeader .gabe {
-        margin-top: 1px;
+    .name-header {
+        font-size: 1.4em;
     }
-    .nameHeader .alana {
-        position: relative;
-        left: 8.4vw;
+    .alana {
+        left: 1.66em;
+        bottom: -0.3em;
     }
 }
 
-@media (min-width: 1201px) {
-    .nameHeader {
-        margin-top: 20px;
-        line-height: 62%;
-        font-size: 5em;
-        text-align: center;
-    }
-    .nameHeader .first-middle {
-        font-size: 0.7em;
-        vertical-align: top;
-        font-weight: 100
-    }
-    .nameHeader .last-heavy {
-        font-weight: 400;
-    }
-    .nameHeader .last-light {
-        font-weight: 300;
-    }
-    .nameHeader .gabe {
-        margin-top: 1px;
-    }
-    .nameHeader .alana {
-        position: relative;
-        left: 1.05em;
-    }
-}
-
-
-.frontCenter {
-    align-self: center;
-    text-align: center;
-}
