adds info about extra events
- changes event pages to use purecss responsive grids

[#87881796]

--- a/assets/main.css
+++ b/assets/main.css
@@ -152,6 +152,9 @@ h2 {
 .leftjust {
     text-align: left;
 }
+.lightly-padded {
+    margin: 1em;
+}
 .padded {
     padding: 4vw;
     max-width: 20em;
