Fix typos on traditions page
- Adds rose to bottom

--- a/assets/main.css
+++ b/assets/main.css
@@ -121,6 +121,15 @@ h2 {
     position: relative;
     float: left;
 }
+.flip-horiz {
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    -ms-transform: scaleX(-1);
+    transform: scaleX(-1);
+    -ms-filter: "FlipH";
+    filter: FlipH;
+}
 .name-header {
     font-size: 7vw;
     float: right;
